--- a/index.html
+++ b/index.html
@@ -5,74 +5,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>기본레이아웃연습3</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/0ac8b4c1ba.js" crossorigin="anonymous"></script>
+  <title>blured_bg</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <section id="box">
-    <div class="inner">
-      <h1 class="hidden">Lorem, ipsum dolor.</h1>
+  <header>
+    <h1><a href="#">LEI DSN LAB</a></h1>
 
-      <div class="wrap">
-        <article>
-          <h2>Title comes here</h2>
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-          <a href="#" class="btn">VIEW DETAIL</a>
-        </article>
+    <ul id="gnb">
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Join us</a></li>
+      <li><a href="#">News & Events</a></li>
+    </ul>
 
-        <article>
-          <h2>Title comes here</h2>
-          <div class="wrap">
-            <article>
-              <a href="#">
-                <i class="fas fa-baby"></i>
-                <strong>items</strong>
-              </a>
-            </article>
-            <article>
-              <a href="#">
-                <i class="fas fa-bell"></i>
-                <strong>items</strong>
-              </a>
-            </article>
-            <article>
-              <a href="#">
-                <i class="fas fa-arrows-alt"></i>
-                <strong>items</strong>
-              </a>
-            </article>
-            <article>
-              <h2>Title comes here</h2>
-              <ul>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-              </ul>
-              <a href="#" class="btnMore">
-                <i class="fas fa-plus"></i>
-              </a>
-            </article>
-            <article>
-              <h2>Title comes here</h2>
-              <ul>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-                <li><a href="#">here comes content title</a></li>
-              </ul>
-              <a href="#" class="btnMore">
-                <i class="fas fa-plus"></i>
-              </a>
-            </article>
-          </div>
-        </article>
+    <a href="#" class="btnRegister"></a>
+  </header>
+
+  <figure>
+    <section id="visual">
+      <div class="txtBox">
+        <span>20 CITIES AND GROWING</span>
+        <h1>BEing founders<br>Takes gets</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam ratione voluptas nulla dolorem quos
+          voluptatibus velit aliquid dolor, tenetur voluptatum nisi atque, debitis maxime pariatur aliquam est, ad
+          reiciendis odit.
+        </p>
+        <nav>
+          <a href="#">Book Demo</a>
+          <a href="#"><i class="fa-solid fa-play"></i></a>
+          <strong>Watch Showreel</strong>
+        </nav>
       </div>
-    </div>
-  </section>
+
+      <div class="picBox">
+        <div class="box">
+          <div class="con"><img src="img/pic2.jpg" alt="pic2"></div>
+        </div>
+      </div>
+
+      <div class="bg">
+        <div class="color1"></div>
+        <div class="color2"></div>
+      </div>
+      <div class="outlined">lucas</div>
+    </section>
+  </figure>
 </body>
 
 </html>
