--- a/index.html
+++ b/index.html
@@ -6,53 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/0ac8b4c1ba.js" crossorigin="anonymous"></script>
-  <title>blured_bg</title>
+  <title>flex</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header>
-    <h1><a href="#">LEI DSN LAB</a></h1>
-
-    <ul id="gnb">
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">About us</a></li>
-      <li><a href="#">Join us</a></li>
-      <li><a href="#">News & Events</a></li>
-    </ul>
-
-    <a href="#" class="btnRegister"></a>
-  </header>
-
-  <figure>
-    <section id="visual">
-      <div class="txtBox">
-        <span>20 CITIES AND GROWING</span>
-        <h1>BEing founders<br>Takes gets</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam ratione voluptas nulla dolorem quos
-          voluptatibus velit aliquid dolor, tenetur voluptatum nisi atque, debitis maxime pariatur aliquam est, ad
-          reiciendis odit.
-        </p>
-        <nav>
-          <a href="#">Book Demo</a>
-          <a href="#"><i class="fa-solid fa-play"></i></a>
-          <strong>Watch Showreel</strong>
-        </nav>
-      </div>
-
-      <div class="picBox">
-        <div class="box">
-          <div class="con"><img src="img/pic2.jpg" alt="pic2"></div>
-        </div>
-      </div>
-
-      <div class="bg">
-        <div class="color1"></div>
-        <div class="color2"></div>
-      </div>
-      <div class="outlined">lucas</div>
+  <main>
+    <section class="wrap">
+      <article>1</article>
+      <article>2</article>
+      <article>3</article>
+      <article>4</article>
+      <article>5</article>
     </section>
-  </figure>
+  </main>
 </body>
 
 </html>
