--- a/index.html
+++ b/index.html
@@ -6,19 +6,85 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/0ac8b4c1ba.js" crossorigin="anonymous"></script>
-  <title>flex</title>
+  <title>flexlayout</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <main>
-    <section class="wrap">
-      <article>1</article>
-      <article>2</article>
-      <article>3</article>
-      <article>4</article>
-      <article>5</article>
+    <header>
+      <h1>
+        <i class="fa-brands fa-firstdraft"></i><br>
+        <span>LEI</span>
+      </h1>
+      <address>
+        2023 LEI<br>
+        ALL RIGHT RESERVED.
+      </address>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
+        <li><a href="#"><i class="fas fa-search"></i></a></li>
+      </ul>
+    </nav>
+    <section>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>01</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, similique?</p>
+          </div>
+          <figure>
+            <video src="vids/vid1.mp4" loop muted></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>02</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, soluta?</p>
+          </div>
+          <figure>
+            <video src="vids/vid2.mp4" loop muted></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>03</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, maxime.</p>
+          </div>
+          <figure>
+            <video src="vids/vid3.mp4" loop muted></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>04</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, soluta.</p>
+          </div>
+          <figure>
+            <video src="vids/vid4.mp4" loop muted></video>
+          </figure>
+        </div>
+      </article>
     </section>
+    <!-- <aside>
+      <div class="txt">
+        <h2>01</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, in!</p>
+
+        <span>close</span>
+      </div>
+      <figure>
+        <video src="vids/vid1.mp4" loop muted></video>
+      </figure>
+    </aside> -->
   </main>
 </body>
 
