--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/0ac8b4c1ba.js" crossorigin="anonymous"></script>
   <title>flexlayout</title>
   <link rel="stylesheet" href="css/style.css">
+  <script defer src="flex_layout.js"></script>
 </head>
 
 <body>
@@ -74,7 +75,7 @@
         </div>
       </article>
     </section>
-    <!-- <aside>
+    <aside>
       <div class="txt">
         <h2>01</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, in!</p>
@@ -84,7 +85,7 @@
       <figure>
         <video src="vids/vid1.mp4" loop muted></video>
       </figure>
-    </aside> -->
+    </aside>
   </main>
 </body>
 
